# descmaker_example

./: .gitignore  .gitmodules  LICENSE  Pick & Place (Basic).factoryio  README.md  convert.py  pick and place basic.wmod  pick_and_place_basic.wmod  setup.py  spec_grab_item.eps  utils.py
application/: CMakeLists.txt  platformio.ini  run.sh
application/lib/: CMakeLists.txt
application/lib/supervisor/: CMakeLists.txt  supervisor.c
application/src/: factoryio.cpp  factoryio.h  main.c  main.cpp  user_defined_actions.h  user_defined_interface.h
application/src/event_handler/: event_handler.c  events.c  events.h
application/src/supervisors/: events.c  se01_desliga_cv1.c  se01_desliga_cv1.h  se01_liga_cv1.c  se01_liga_cv1.h  se02_bloqueia_braco.c  se02_bloqueia_braco.h  se02_desce_braco.c  se02_desce_braco.h  se02_sobre_braco.c  se02_sobre_braco.h  se03_avanca_braco.c  se03_avanca_braco.h  se03_retorna_braco.c  se03_retorna_braco.h  se04_pega_peca.c  se04_pega_peca.h  se04_solta_peca.c  se04_solta_peca.h  se05_desliga_cv2.c  se05_desliga_cv2.h  se05_liga_cv2.c  se05_liga_cv2.h  sup.c  supE01_liga_cv1.c  supE01_liga_cv1.h  supE02_desliga_cv1.c  supE02_desliga_cv1.h  supE03_bloqueia_braco.c  supE03_bloqueia_braco.h  supE04_desce_braco.c  supE04_desce_braco.h  supE05_sobre_braco.c  supE05_sobre_braco.h  supE06_avanca_braco.c  supE06_avanca_braco.h  supE07_retorna_braco.c  supE07_retorna_braco.h  supE08_pega_peca.c  supE08_pega_peca.h  (+17 more)
images/: experimental_plant.eps  pick_and_place_basic.wmod  plant_model.eps  plant_specifications.eps
